# eda-rl

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  REPORT_GENERIC_DESIGN_FIX_PLAN.md  pyproject.toml
docs/: 08_funnel_optimizer.md  eda_rl_vs_autotuner.md  rl_system.md
eda_rl/: __init__.py  cli.py
eda_rl/common/: __init__.py  cascade_reward.py  constants.py  designs.py  knobs.py  measure_real.py  physical_reward.py  physical_runner.py  recipe.py  sim.py  validate.py  verilator_sim.py
eda_rl/designs/: aes.yaml  gcd.yaml  likith.yaml  npuload.yaml  sagar.yaml  tensordyne.yaml  tinymac_accel.yaml  tpu.yaml
eda_rl/funnel/: __init__.py  benchmark_funnel.py  build_table.py  candidates.py  collect_best.py  doctor.py  env.py  fit_surrogate.py  promotion_agent.py  run_funnel_optimizer.py  state_spec.py  surrogate.py
eda_rl/gen1/: benchmark_agents.py  cascade_env.py  dashboard.py  env.py  physical_env.py  run_physical_optimizer.py  runner.py  test_reward_sanity.py
eda_rl/gen2/: benchmark_funnel.py  build_table.py  candidates.py  collect_best.py  fit_surrogate.py  funnel.py  promotion_agent.py  run_funnel_optimizer.py  search_space_funnel.yaml  state_spec.py  surrogate.py
eda_rl/viz/: campaign_data.py  dashboard.py  report.py
legacy/: README.md
legacy/audits/: AUDIT_FINDINGS.md  RECOMMENDATIONS.md
legacy/docs/: 08_funnel_optimizer.md
legacy/gen1/: cascade.py  reward.py  run_cascade_optimizer.py  run_optimizer.py  test_cascade.py
tests/: test_parsers.py
tests/fixtures/: README.md  sta_combinational.txt  sta_sequential.txt  yosys_stat_legacy.txt  (+1 more)
(+22 files in other folders)
